# topocalc

./: .gitignore  AUTHORS.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  unittest.yml
docs/: index.rst
topocalc/: gradient.py  horizon.py  illumination_angle.py  skew.py  viewf.py
topocalc/core_c/: hor1d.c  horizon.c  illumination_angle.pyx  topo_core.h  topo_core.pyx
topocalc/tests/: test_horizon.py  test_illumination_angle.py  test_viewf.py
topocalc/tests/Lakes/: dem.npy  sky_view.npy  topo.txt
topocalc/tests/Lakes/horizon_files/: horizon_-10.txt  horizon_-100.txt  horizon_-105.txt  horizon_-110.txt  horizon_-115.txt  horizon_-120.txt  horizon_-125.txt  horizon_-130.txt  horizon_-135.txt  horizon_-140.txt  horizon_-145.txt  horizon_-15.txt  horizon_-150.txt  horizon_-155.txt  horizon_-160.txt  horizon_-165.txt  horizon_-170.txt  horizon_-175.txt  horizon_-20.txt  horizon_-25.txt  horizon_-30.txt  horizon_-35.txt  horizon_-40.txt  horizon_-45.txt  horizon_-5.txt  horizon_-50.txt  horizon_-55.txt  horizon_-60.txt  horizon_-65.txt  horizon_-70.txt  horizon_-75.txt  horizon_-80.txt  horizon_-85.txt  horizon_-90.txt  horizon_-95.txt  horizon_0.txt  horizon_10.txt  horizon_100.txt  horizon_105.txt  horizon_110.txt  (+32 more)
